--- a/crypto-demo/src/App.css
+++ b/crypto-demo/src/App.css
@@ -15,6 +15,41 @@ a {
 .title {
   font-weight: 700;
   flex: 1;
-  color: gold;
+  color: orange;
   cursor: pointer;
+}
+
+.banner {
+  background-image: url('../public/banner2.jpg');
+}
+
+.bannerContent {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 25px;
+  justify-content: space-around;
+}
+
+.tagline {
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.carousel {
+  height: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.carouselItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  color: white;
 }
