--- a/crypto-demo/src/App.css
+++ b/crypto-demo/src/App.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: "Fira Sans"
 }
 
 a {
@@ -43,6 +44,7 @@ a {
   height: 50%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .carouselItem {
@@ -54,6 +56,69 @@ a {
   color: white;
 }
 
-.row {
-  
+.coin-stats {
+  height: 20vh;
+  width: 100%;
+  border-spacing: 10px 20px;
+  width: auto;
+}
+
+.timeFrames-container {
+  margin-left: 80%;
+  margin-bottom: 21px;
+  display: flex;
+  gap: 2px;
+  flex-direction: row;
+  box-sizing: border-box;
+}
+
+.timeFrames {
+    background-color: orange; 
+    border: none;
+    color: #3B3B3B;
+    width: 100%;
+    padding: 5px 0;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    border-radius: 5px;
+}
+
+.timeFrames:hover {
+  color: black;
+}
+
+.pop-up {
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  position: absolute;
+  top: 100%; /*Positions the popup directly below the icon */
+  left: 0; /* Aligns the popup with the left edge of the container */
+  z-index: 1000;
+  margin-top: 5px; /* Space between the icon and the popup */
+  width: auto; /* Adjust width as needed */
+  max-width: 200px; /* Optional: Limit max-width if needed */
+}
+
+.canvas-container {
+  height: 60vh;
+  width: 99%;
+}
+
+.coinPage-main-container {
+    display: flex;
+    flex-direction: row;
+    padding: 50;
+    padding-top: 0;
+    margin: 50;
+  }
+
+@media (max-width: 992px) {
+  .coinPage-main-container {
+    flex-direction: column;
+  }
 }
