Added chain functionality

--- a/crypto-demo/src/App.css
+++ b/crypto-demo/src/App.css
@@ -85,6 +85,11 @@ a {
     border-radius: 5px;
 }
 
+.timeFrames.selected-timeframe {
+  color: red;
+  font-weight: bold;
+}
+
 .timeFrames:hover {
   color: black;
 }
